 - [ZBXNEXT-483] added vfs.file.contents[file,encoding] check (asaveljevs)
 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.4rc3

 - [ZBX-3249] added define for frontend graphing on partitioned DB data store (Aly)
 - [ZBX-3216] fixed setup not catching existing configuration file on step 6 (Vedmak)
 - [ZBX-3240] updated Russian translation; thanks to dotneft and zalex_ua (Richlv)
 - [ZBX-3229] improved output of configure script (Richlv,asaveljevs)
 - [ZBX-3222] fixed Zabbix returns to incorrect page from acknowledge form (Vedmak)
 - [ZBX-2577] fixed template trigger update affects downstream triggers (Vedmak)
 - [ZBX-3221] fixed host deletion through API (Aly)
 - [ZBX-3220] fixed error when delete host on postgresql db (Vedmak)
 - [ZBX-2293] fixed server terminating when sending "database down" alerts using scripts (asaveljevs,Sasha)
 - [ZBX-3184] fixed 1000 vs. 1024 multipliers for bits, bytes, and other units in notification macros (asaveljevs)
 - [ZBX-3184] fixed negative values with unit suffixes in notification macros (asaveljevs)
 - [ZBX-3211] updated Ukrainian translation; renamed locale to uk_ua; thanks to zalex_ua (Richlv)
 - [ZBX-3085] fixed possible stop to send data from proxy after shutdown of MySQL server; thanks to Takanori Suzuki (Sasha)
 - [ZBX-3169] updated French translation; thanks to Alixen (Alexei)
 - [ZBX-3218] server and proxy are no longer built with libcurl by default (asaveljevs)
 - [ZBX-3145] fixed user macros resolving (Vedmak)
 - [ZBX-3215] fixed filtering by group in trigger selection popup (Vedmak)
 - [ZBX-3144] removed parsing of existing expression in trigger expression popup (Vedmak)
 - [ZBX-3207] fixed possibility to click on web items in trigger expressions (Vedmak)