@@ -885,12 +885,13 @@ else {
 	}
 
 	function create_id_by_nodeid($id,$nodeid=0){
-
 		global $ZBX_LOCALNODEID;
+
+		if($id == 0) return 0;
 		$nodeid = ($nodeid == 0)?get_current_nodeid(false):$nodeid;
 
 		$id=remove_nodes_from_id($id);
-		$id=bcadd($id,bcadd(bcmul($nodeid,'100000000000000'),bcmul($ZBX_LOCALNODEID,'100000000000')));
+		$id=bcadd($id,bcadd(bcmul($nodeid,'100000000000000'),bcmul($ZBX_LOCALNODEID,'100000000000')),0);
 	return $id;
 	}
 
